Fixed submit overlapping out of box on take-quiz page

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -153,8 +153,7 @@ nav a {
 
 #finish-quiz {
   width: 28%;
-  font-size: 7em;
-  margin-bottom: 2em;
+  font-size: 6em;
 }
 
 .div-buttons {
